fix search bar size on small screens

--- a/src/components/SearchInput/style.scss
+++ b/src/components/SearchInput/style.scss
@@ -1,6 +1,6 @@
 .search {
     max-width: 920px;
-    width: 71%;
+    width: 90%;
     margin: 4rem 0 2rem;
   
     display: flex;
@@ -66,5 +66,6 @@
 @media screen and (max-width: 400px) {
     .search {
         margin-top: 1rem;
+        padding: 1rem 1.25rem;
     }
 }
